# ResponsibleAI

./: .replit  Procfile  db.sqlite3  manage.py  pyproject.toml  render.yaml  replit.nix  requirements.txt
ai_ethics_platform/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
dashboard/: admin.py  bias_detection.py  forms.py  gemini_ai.py  governance.py  models.py  sample_data.py  tests.py  transparency.py  urls.py  views.py  visualizations.py
dashboard/migrations/: 0001_initial.py  0002_modelanalysis_user_useractivity_userprofile.py  0003_modelanalysis_sample_dataset_type.py  __init__.py
static/css/: enhanced.css  main.css  responsive.css
static/js/: bias_dashboard.js  education.js  enhanced.js  governance.js  transparency_analyzer.js
staticfiles/css/: responsive.css
staticfiles/js/: case_studies.js  chart_utils.js  main.js  transparency_analyzer.js
templates/: base.html
templates/dashboard/: bias_detection.html  case_studies.html  education.html  governance.html  index.html  login.html  profile.html  signup.html  transparency.html
